--- a/week 2/Liner_regression_salary_predictionpynb.ipynb
+++ b/week 2/Liner_regression_salary_predictionpynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcfJaPDk98ouSAZRQBdroq",
+      "authorship_tag": "ABX9TyN8bnIIgmsbWuZehQWCGXzS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,33 +27,30 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tioJ5Ajosoax"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "# @title Default title text\n",
-        "print('Fahrul Rozi')\n",
-        "print('1103210235')"
+        "Nama : Fahrul Rozi\n",
+        "\n",
+        "NIM:1103210235\n",
+        "\n",
+        "Tugas : Linear Regression Tugas Week 2\n",
+        "\n",
+        "Dokumentasi ChatGPT : https://chat.openai.com/share/d68c27b7-ab40-40cd-b74e-8f5dc2b35546"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QHNyWnFyn0Tv",
-        "outputId": "1dc16df4-40a1-4f4d-d2d5-3e04b91fb76f"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fahrul Rozi\n"
-          ]
-        }
-      ]
+        "id": "J15eWKwtsqNZ"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +82,7 @@
       "metadata": {
         "id": "1s0qDTW-ePkJ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +98,7 @@
         "id": "yd2soaAsfx_6",
         "outputId": "a38681f4-dda8-4eba-db73-ec387a03bdf9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +397,7 @@
         "id": "fv-SYc5Wf4Mg",
         "outputId": "db01f308-4826-40c9-fb4b-6ca391b5d94d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +427,7 @@
       "metadata": {
         "id": "WcKjdkqCggKa"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +440,7 @@
       "metadata": {
         "id": "X6HvVw78gxZT"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +459,7 @@
         "id": "lYnDlSnQg7gK",
         "outputId": "b18424ff-9442-4f65-94ad-3db943edba27"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +491,7 @@
         "id": "IpOqEpnOhXd9",
         "outputId": "ee168826-ff6e-405f-97c6-e45251e02a51"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +529,7 @@
         "id": "hzXTm70PhjQ0",
         "outputId": "4f4bf619-13ee-4bc9-b344-690674efec61"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +562,7 @@
         "id": "DwV8inPMhsJj",
         "outputId": "db2a1627-3009-4ae2-8b12-9727825dc94e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -605,7 +602,7 @@
         "id": "cgzjWTs3hyhS",
         "outputId": "887217d2-4713-49a4-838a-f2afccdb5fb2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -637,7 +634,7 @@
         "id": "Tsuc3Uv2h0RX",
         "outputId": "f6b33499-309d-469d-a4cc-ee5e23358d60"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +953,7 @@
         "id": "fi4363wyh38H",
         "outputId": "ff178565-7858-4574-c2bf-4a0e130224e3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
